[gd_scene load_steps=3 format=3 uid="uid://deoj4kv5qnxkk"]

[ext_resource type="Script" uid="uid://cjblkxv5a836" path="res://elements/skill_node_connector/skill_node_connector.gd" id="1_8shrr"]

[sub_resource type="QuadMesh" id="QuadMesh_8shrr"]
size = Vector2(4, 4)

[node name="SkillNodeConnector" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8shrr")

[node name="Connector" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -14.0
offset_right = 14.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2

[node name="MeshInstance2D" type="MeshInstance2D" parent="Connector"]
position = Vector2(14, 14)
mesh = SubResource("QuadMesh_8shrr")

[node name="LineConnections" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="mouse_entered" from="Connector" to="." method="_on_connector_mouse_entered"]
[connection signal="mouse_exited" from="Connector" to="." method="_on_connector_mouse_exited"]
